# V8-MR

./: .gitignore  CMakeLists.txt  MapWriter.cpp  MapWriter.h  MergeMap.cpp  MergeMap.h  OutputWriter.cpp  OutputWriter.h  main.cpp  pretty_print.cpp  pretty_print.h  send_task.py  v8install
src/: MapCassandraOperation.cpp  MapCassandraOperation.h  MapOperation.cpp  MapOperation.h  MapSeqOperation.cpp  MapSeqOperation.h  RecordCompressor.cpp  RecordCompressor.h  ReduceOperation.cpp  ReduceOperation.h  SortedMerge.cpp  SortedMerge.h  YieldCallback.cpp  YieldCallback.h  consts.h  main.cpp
src/reader/: CloudTrailReader.cpp  CloudTrailReader.h  KVStreamReader.cpp  KVStreamReader.h  RecordsReader.h
src/writer/: KVWriter.h  SeqFileWriter.cpp  SeqFileWriter.h  SeqWriter.cpp  SeqWriter.h
